--- a/config/dev.yaml
+++ b/config/dev.yaml
@@ -1,2 +1,3 @@
-SQLALCHEMY_DATABASE_URI: mysql://username:password@server/db
-
+SQLALCHEMY_DATABASE_URI: mysql://root:qwe123@127.0.0.1:3306/flasky?charset=utf8
+SQLALCHEMY_TRACK_MODIFICATIONS: false
+SQLALCHEMY_COMMIT_ON_TEARDOWN: false
